# aspose-pdf-rust-cpp

./: .cargoignore  Cargo.toml  LICENSE  LICENSE_COMMERCIAL.txt  README.md  build.rs
examples/: about.rs  add_page_num.rs  add_text_footer.rs  add_text_header.rs  add_watermark.rs  append.rs  append_pages.rs  bytes.rs  character_count.rs  crop.rs  decrypt.rs  embed_fonts.rs  encrypt.rs  export_fdf.rs  export_xfdf.rs  export_xml.rs  extract_text.rs  flatten.rs  get_permissions.rs  grayscale.rs  hello.rs  is_encrypted.rs  is_signed.rs  merge_documents.rs  new.rs  open.rs  open_with_password.rs  optimize.rs  optimize_file_size.rs  optimize_resource.rs  page_add.rs  page_add_page_num.rs  page_add_text.rs  page_add_text_footer.rs  page_add_text_header.rs  page_add_watermark.rs  page_character_count.rs  page_count.rs  page_crop.rs  page_delete.rs  (+65 more)
lib/: AsposePDFforRust_windows_amd64.dll.bz2.sha256  AsposePDFforRust_windows_amd64.lib  README.txt  libAsposePDFforRust_darwin_amd64.dylib.bz2.sha256  libAsposePDFforRust_darwin_arm64.dylib.bz2.sha256  libAsposePDFforRust_linux_amd64.so.bz2.sha256
src/: document.rs  document_gen_fn.rs  enums.rs  errors.rs  extern_c.rs  lib.rs  permissions.rs  product_info.rs  utils.rs
